# argos_bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
argos_worlds/: construct.argos  construct_kheperaiv.argos  demo.argos  multi_robot_dan_maze.argos  multi_robot_monster_maze.argos  multi_robots.argos
launch/: launch_demo.sh  launch_explore.sh
msg/: Proximity.msg  ProximityList.msg  Puck.msg  PuckList.msg  los.msg  losList.msg
plugin/: CMakeLists.txt
plugin/argos_ros_bot/: CMakeLists.txt  argos_ros_bot.cpp  argos_ros_bot.h
plugin/clock_loop_functions/: CMakeLists.txt  clock_loop_function.cpp  clock_loop_function.h
plugin/kheperaiv_ros/: CMakeLists.txt  kheperaiv_ros.cpp  kheperaiv_ros.h
plugin/loop_functions/: CMakeLists.txt  clock_loop_function.cpp  clock_loop_function.h
scripts/: cmd_line_launch.sh  demo_controller.py  launch_demo_controller.py
